# zkb_tools

./: Cargo.toml
doc/: killmail.json  schema.txt  zkb.json
src/: zkb_data_manager.rs  zkb_fetch_killmails.rs  zkb_hash_manager.rs  zkb_send_quit.rs  zkb_websocket_client.rs
src/lib/: lib.rs
