[package]
name = "zkb_tools"
version = "0.1.0"
edition = "2018"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "zkb_fetch_killmails"
path = "src/zkb_fetch_killmails.rs"

[[bin]]
name = "zkb_hash_manager"
path = "src/zkb_hash_manager.rs"

[[bin]]
name = "zkb_send_quit"
path = "src/zkb_send_quit.rs"

[[bin]]
name = "zkb_data_manager"
path = "src/zkb_data_manager.rs"

[[bin]]
name = "zkb_websocket_client"
path = "src/zkb_websocket_client.rs"


[dependencies]
    anyhow = "1.0"
    bytes = "1.1"
    chrono = "0.4"
    rumqttc = "0.10"
    bincode = "1.3"
    clap = { version = "3.0", features = ["derive"] }
    hyper = { version = "0.14", features = ["full"] }
    tokio = { version = "1.15", features = ["full"] }
    serde = { version = "1.0", features = ["derive"] }
    time = { version = "0.3", features = ["formatting", "parsing"] }
    serde_json = "1.0.74"
    hex = "0.4"
    hyper-tls = "0.5.0"
    futures = "0.3"
    rusqlite = "0.26"
    reqwest = { version = "0.11", features = ["blocking", "json"] }
    websockets = "*"



